bugfix: domain images properly aligned

--- a/wp-content/themes/sage/assets/styles/components/_block.scss
+++ b/wp-content/themes/sage/assets/styles/components/_block.scss
@@ -208,7 +208,7 @@ section.articles {
     .image-background {
         position: absolute;
         top: 0;
-        left: 0;
+        right: 0;
         min-height: 100%;
         min-width: 100%;
     }
